--- a/m4r/views/sector_controls.erb
+++ b/m4r/views/sector_controls.erb
@@ -18,7 +18,7 @@
       <div id="map-content-icons">
         <div id="map-content-icons2">
           <ul>
-            <li class="sectors">ACTIVE SECTORS:</li>
+            <li class="sectors">MAJOR SECTORS:</li>
             <li class="s1"><a  sector-name="public" original-title="Public administration Law, Justice" class="sectorcontrol inactive" id="sectorcontrol_public" href="#" onclick="return wb.toggleSector('public')">1</a></li>
             <li class="s2"><a  sector-name="agriculture" original-title="Agriculture, fishing, forestry" class="sectorcontrol inactive" id="sectorcontrol_agriculture" href="#" onclick="return wb.toggleSector('agriculture')">2</a></li>
             <li class="s3"><a  sector-name="health" original-title="Health, other social" class="sectorcontrol inactive" id="sectorcontrol_health" href="#" onclick="return wb.toggleSector('health')">3</a></li>
