--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -64,11 +64,11 @@ if(typeof(F1)=='undefined') {F1 = {}}
         icons[self.sectors[sector].name] = self.sectors[sector].icon;
       });
       		
-      this.wbicons = {"Agriculture, Fishing, and Forestry":"<%= PLATFORM_API_URL %>/images/icons/worldbank/agriculture-on.png","Communications":"<%= PLATFORM_API_URL %>/images/icons/worldbank/communications-on.png","Education":"<%= PLATFORM_API_URL %>/images/icons/worldbank/education-on.png","Energy and Mining":"<%= PLATFORM_API_URL %>/images/icons/worldbank/energy-on.png","Finance":"<%= PLATFORM_API_URL %>/images/icons/worldbank/finance-on.png","Health and Other Social Services":"<%= PLATFORM_API_URL %>/images/icons/worldbank/health-on.png","Industry":"<%= PLATFORM_API_URL %>/images/icons/worldbank/industry-on.png","Public Administration, Law, and Justice":"<%= PLATFORM_API_URL %>/images/icons/worldbank/public-on.png","Transportation":"<%= PLATFORM_API_URL %>/images/icons/worldbank/transportation-on.png","Water, Sanitation, and Flood Protection":"<%= PLATFORM_API_URL %>/images/icons/worldbank/water-on.png"};
+      this.wbicons = {"Agriculture, Fishing, and Forestry":"<%= PLATFORM_API_URL %>/images/icons/worldbank/agriculture-on.png","Communications":"<%= PLATFORM_API_URL %>/images/icons/worldbank/communication-on.png","Education":"<%= PLATFORM_API_URL %>/images/icons/worldbank/education-on.png","Energy and Mining":"<%= PLATFORM_API_URL %>/images/icons/worldbank/energy-on.png","Finance":"<%= PLATFORM_API_URL %>/images/icons/worldbank/finance-on.png","Health and Other Social Services":"<%= PLATFORM_API_URL %>/images/icons/worldbank/health-on.png","Industry":"<%= PLATFORM_API_URL %>/images/icons/worldbank/industry-on.png","Public Administration, Law, and Justice":"<%= PLATFORM_API_URL %>/images/icons/worldbank/public-on.png","Transportation":"<%= PLATFORM_API_URL %>/images/icons/worldbank/transportation-on.png","Water, Sanitation, and Flood Protection":"<%= PLATFORM_API_URL %>/images/icons/worldbank/water-on.png"};
       this.wbsectors = ["agriculture","public","education","health","water","transportation","energy","finance"]
       this.sectors = {
         "agriculture": {name: "Agriculture, Fishing, and Forestry", funding: 0, projects: [], activities: 0, shortname: "agriculture", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/agriculture-on.png"}, 
-        "communications": {name: "Communications", funding: 0, projects: [], activities: 0, shortname: "communications", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/communications-on.png"},
+        "communications": {name: "Communications", funding: 0, projects: [], activities: 0, shortname: "communications", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/communication-on.png"},
         "education": {name: "Education", funding: 0, projects: [], activities: 0, shortname: "education", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/education-on.png"}, 
         "energy": {name: "Energy and Mining", funding: 0, projects: [], activities: 0, shortname: "energy", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/energy-on.png"},
         "finance": {name: "Finance", funding: 0, projects: [], activities: 0, shortname: "finance", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/finance-on.png"},
@@ -85,7 +85,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
                 uiZoom: true,uiLayers: false,uiLegend: false,uiStyles: true,
                 uiHeader: true,hideGCLogo: true,hideGILogo: true,
                 core_host:  proxy_host + '/', finder_host:proxy_host + '/', maker_host: proxy_host + '/',
-                onload: function() { console.log("Loaded"); self.loadedMap() }
+                onload: function() { self.loadedMap() }
       });
     },
     setBookmark: function(key, value) {
@@ -117,12 +117,6 @@ if(typeof(F1)=='undefined') {F1 = {}}
       jq.each(self.sectors, function (sector) {
         self.map.addFilter(self.stylelayers["Project Locations"].order, {expression: "$[sector1] == " + self.sectors[sector].shortname});
       });
-      return false;
-    },
-    highlighProject: function(project_id) {
-      var highlightExpression = "$[project id] == '"+project_id+"'";
-      this.map.swf.clearHighlights(this.stylelayers["Project Locations"].order);
-      this.map.swf.addHighlight(this.stylelayers["Project Locations"].order, highlightExpression);
       return false;
     },
     setMapTitle: function() {
@@ -278,8 +272,9 @@ if(typeof(F1)=='undefined') {F1 = {}}
     },
     highlightProject: function(project_id) {
       var self = this;
+      var highlightExpression = "$[project id] == '"+project_id+"'";
       this.map.swf.clearHighlights(self.stylelayers["Project Locations"].order);
-      this.map.swf.addHighlight(self.stylelayers["Project Locations"].order,"$[project id] == '"+project_id+"'");
+      this.map.swf.addHighlight(self.stylelayers["Project Locations"].order,highlightExpression);
       return false;
       return false;
     },
@@ -451,7 +446,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
       self.map.swf.addLayerCategoryFilter(self.stylelayers["Project Locations"].order, {attribute:"sector1",categories:self.wbicons});
       
       // infowindow
-      self.map.swf.addLayerInfoWindowFilter(self.stylelayers["Project Locations"].order, {title: "$[project title]", subtitle: "$[sector1]", tabs:[{title: "Financing", type: "text", value:"Project ID: <a href='http://web.worldbank.org/external/projects/main?pagePK=64283627&piPK=73230&theSitePK=40941&menuPK=228424&Projectid=$[project id]'>$[project id]\nProject Name: $[project title]\nSector:$[sector1]\nTotal Amount: $ $[total amt] million"}, {title: "Location", type: "text", value: "$[adm1]\n$[adm2]\n\n$[precision description]"}]});
+      self.map.swf.addLayerInfoWindowFilter(self.stylelayers["Project Locations"].order, {title: "$[project title]", subtitle: "$[sector1]", tabs:[{title: "Financing", type: "text", value:"Project ID: <a href='http://web.worldbank.org/external/projects/main?pagePK=64283627&piPK=73230&theSitePK=40941&menuPK=228424&Projectid=$[project id]'>$[project id]</a>\nProject Name: $[project title]\nSector:$[sector1]\nTotal Amount: $ $[total amt] million"}, {title: "Location", type: "text", value: "$[adm1]\n$[adm2]\n\n$[precision description]"}]});
       self.map.swf.addLayerInfoWindowFilter(self.stylelayers["Project Counts"].order, {title: "Projects: $[project count]", subtitle: "Total Projects working in this Region"});
       // self.map.swf.addLayerInfoWindowFilter(self.stylelayers["Project Counts"].order, {title: "Projects: $[project count]", subtitle: "Total Projects working in this Region", tabs:[{title: "Projects", type: "text", value:"<ul><li>$[pid1]</li><li>$[pid2]</li><li>$[pid3]</li><li>$[pid4]</li><li>$[pid5]</li><li>$[pid6]</li><li>$[pid7]</li><li>$[pid8]</li><li>$[pid9]</li><li>$[pid10]</li><li>$[pid11]</li><li>$[pid12]</li><li>$[pid13]</li><li>$[pid14]</li></ul>"}, {title: "Location", type: "text", value: "Location: $[adm2],$[adm1]\nWorld Bank Region: $[region]\n$[precision description]"}]});
 
@@ -460,6 +455,16 @@ if(typeof(F1)=='undefined') {F1 = {}}
       this.map.showControl("Legend",true);
       this.map.swf.setStyle( { legend: { buttonBgColor:0x92948C, buttonPlacement:"horizontal", buttonFontColor:0xFFFFFF, buttonBgAlpha:0.7,offset:{x:0,y:95}}});      
       return false;
+    },
+    highlightRegions: function(regions, region_attr) {
+        var self = this;
+        if(region_attr == null)
+            region_attr = "Country";
+        
+        self.map.swf.clearHighlights(0);
+        jq.map(regions,function(region) {
+            self.map.swf.addHighlight(0, "$["+region_attr+"] == '"+region+"'");
+        });
     },
     hideLoading: function() {
       jq("#loading").hide();
@@ -470,7 +475,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
       // jq("#sall").attr('checked', false); // clear the checkbox
       
       if( self.initialized ) {return;}
-      console.log("drawCharts");
+
       self.getLayers(self.map);
       self.styleMap(self.map);
       F1.Visualizer.utils.get_data_from_flash(self.stylelayers["Project Locations"].source.replace("finder:",""),   
@@ -489,6 +494,11 @@ if(typeof(F1)=='undefined') {F1 = {}}
          self.styleLegend();
          if(self.region != "World"){
             self.drawCharts();
+         } else {
+             self.highlightRegions(["Kenya","Haiti","Philippines","Bolivia"]);
+              jq('#project_count').html("473");
+              jq('#activity_count').html("12,000");
+             self.hideLoading();
          }
       }
   }
