--- a/m4r/views/overview.erb
+++ b/m4r/views/overview.erb
@@ -15,8 +15,8 @@
                   <p>Overview »</p>
                   <ul>
                     <li><a href="/about#context">Context</a></li>
-                    <li><a href="/about#strategy">Strategy</a></li>
-                    <li><a href="/about#results">Feedback</a></li>
+                    <li><a href="/about#partners">Partners</a></li>
+                    <li><a href="/about#feedback">Feedback</a></li>
                   </ul>
                 </div>
                 <div class="overview-text"><strong>The Mapping for Results Beta</strong> initiative provides detailed information on our efforts to reduce poverty and alleviate human suffering in every part of the world. This website showcases information on the what and where by accessing the indicator, sector, region, and funding dropdown and toggle areas. <a class="readmore" href="/about">Read More »</a></div>
