--- a/m4r/views/share.erb
+++ b/m4r/views/share.erb
@@ -1,6 +1,6 @@
     <div id="share">
       <ul>
         <% if !@country.nil? && @country[:name] != "World" %><li class="download"><a href="" id="download_data">DOWNLOAD</a></li><% end %>
-        <li class="simpleshare_link"><a href="#" onclick="javascript:return false">SHARE</a></li>
+        <li class="simpleshare_link"><a href="#" onclick="javascript:return false" title="Share - coming soon">SHARE</a></li>
       </ul>
     </div>
