--- a/m4r/views/footer.erb
+++ b/m4r/views/footer.erb
@@ -28,3 +28,4 @@
     <!--Grey Footer Ends-->
   </div>
   <!-- /#footer -->
+  <script type="text/javascript" charset="utf-8" src="/js/wb_behaviors.js"></script>
