--- a/m4r/views/layer_controls.erb
+++ b/m4r/views/layer_controls.erb
@@ -38,8 +38,8 @@
     <li class="first" title="Layer: Projects"><a href="#" id="layercontrol_projects" onclick="return wb.toggleSector('none',false)">PROJECTS</a>
       <% unless @country[:name] == "World" %>
       <ul>
-        <li><a href="#" onclick="return wb.toggleSector('counts_admin1', true)">Number by Admin 1</a></li>
-        <li><a href="#" onclick="return wb.toggleSector('counts_admin2', true)">Number by Admin 2</a></li>
+        <li><a href="#" onclick="return wb.toggleSector('counts_admin1', true)">Number by Province</a></li>
+        <li><a href="#" onclick="return wb.toggleSector('counts_admin2', true)">Number by District</a></li>
         <li><a href="#" onclick="return wb.toggleSector('all', true)">All Projects</a></li>
         <li><a href="#" onclick="return wb.toggleSector('none',false)">No Projects</a></li>
       </ul>
