--- a/m4r/views/overview.erb
+++ b/m4r/views/overview.erb
@@ -2,13 +2,13 @@
       <div id="banner">
         <h1 id="banner-header" title="Click to hide the overview information">
           <span>Mapping for Results</span>
-          <div class="collapsible-header collapsed" content_id="collapsible-banner" >
+          <div class="collapsible-header expanded" content_id="collapsible-banner" >
             <div title="More information about Mapping for Results" class="banner-open-image"></div>
           </div>
         </h1>
         
         <div id="banner-content">
-          <div class="collapsible-content" id="collapsible-banner" style="display:none">
+          <div class="collapsible-content" id="collapsible-banner" style="">
             <div id="block-nodeasblock-3273" class="block block-nodeasblock ">
               <div class="content">
                 <div class="overview-links">
@@ -19,7 +19,7 @@
                     <li><a href="/about#feedback">Feedback</a></li>
                   </ul>
                 </div>
-                <div class="overview-text"><strong>The Mapping for Results Beta</strong> initiative provides detailed information on our efforts to reduce poverty and alleviate human suffering in every part of the world. This website showcases information on the what and where by accessing the indicator, sector, region, and funding dropdown and toggle areas. <a class="readmore" href="/about">Read More »</a></div>
+                <div class="overview-text"><strong>The Mapping for Results Platform</strong> (<em>beta version</em>) provides detailed information about our work to reduce poverty and promote sustainable development around the world. This pilot website aims to visualize the location of our projects and to provide access to information about indicators, sectors, funding and results. <a class="readmore" href="/about">Read More »</a></div>
               </div>
             </div>
           </div>
