--- a/m4r/views/sector_controls.erb
+++ b/m4r/views/sector_controls.erb
@@ -1,36 +1,19 @@
-
-  <script type="text/javascript">
-  jq(function() {
-        jq('.s1').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('.s2').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('.s3').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('.s4').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('.s5').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('.s6').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('.s7').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('.s8').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('.s9').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('.s10').tipsy({gravity: jq.fn.tipsy.autoNS});
-        jq('.s11').tipsy({gravity: jq.fn.tipsy.autoNS});
-  });
-  </script>
-
       <div id="map-content-icons">
         <div id="map-content-icons2">
           <ul>
             <li class="sectors">MAJOR SECTORS:</li>
-            <li class="s1"><a  sector-name="public" original-title="Public administration Law, Justice" class="sectorcontrol inactive" id="sectorcontrol_public" href="#" onclick="return wb.toggleSector('public')">1</a></li>
-            <li class="s2"><a  sector-name="agriculture" original-title="Agriculture, fishing, forestry" class="sectorcontrol inactive" id="sectorcontrol_agriculture" href="#" onclick="return wb.toggleSector('agriculture')">2</a></li>
-            <li class="s3"><a  sector-name="health" original-title="Health, other social" class="sectorcontrol inactive" id="sectorcontrol_health" href="#" onclick="return wb.toggleSector('health')">3</a></li>
-            <li class="s4"><a  sector-name="communications" original-title="Communications" class="sectorcontrol inactive" id="sectorcontrol_communications" href="#" onclick="return wb.toggleSector('communications')">4</a></li>
-            <li class="s5"><a  sector-name="energy" original-title="Energy, mining" class="sectorcontrol inactive" id="sectorcontrol_energy" href="#" onclick="return wb.toggleSector('energy')">5</a></li>
-            <li class="s6"><a  sector-name="finance" original-title="Finance" class="sectorcontrol inactive" id="sectorcontrol_finance" href="#" onclick="return wb.toggleSector('finance')">6</a></li>
-            <li class="s7"><a  sector-name="industry" original-title="Industry, trade" class="sectorcontrol inactive" id="sectorcontrol_industry" href="#" onclick="return wb.toggleSector('industry')">7</a></li>
-            <li class="s8"><a  sector-name="transportation" original-title="Transportation" class="sectorcontrol inactive" id="sectorcontrol_transportation" href="#" onclick="return wb.toggleSector('transportation')">8</a></li>
-            <li class="s9"><a  sector-name="water" original-title="Water, Sanitation, flood protection" class="sectorcontrol inactive" id="sectorcontrol_water" href="#" onclick="return wb.toggleSector('water')">9</a></li>
-            <li class="s10"><a sector-name="education" original-title="Education" id="sector11" href="#" onclick="return wb.toggleSector('education')" class="sectorcontrol inactive" id="sectorcontrol_education">10</a> </li>
+            <li class="s1"><a  sector-name="public" original-title="Public administration Law, Justice" class="sectorcontrol inactive" id="sectorcontrol_public" href="#">1</a></li>
+            <li class="s2"><a  sector-name="agriculture" original-title="Agriculture, fishing, forestry" class="sectorcontrol inactive" id="sectorcontrol_agriculture" href="#">2</a></li>
+            <li class="s3"><a  sector-name="health" original-title="Health, other social" class="sectorcontrol inactive" id="sectorcontrol_health" href="#">3</a></li>
+            <li class="s4"><a  sector-name="communications" original-title="Communications" class="sectorcontrol inactive" id="sectorcontrol_communications" href="#">4</a></li>
+            <li class="s5"><a  sector-name="energy" original-title="Energy, mining" class="sectorcontrol inactive" id="sectorcontrol_energy" href="#">5</a></li>
+            <li class="s6"><a  sector-name="finance" original-title="Finance" class="sectorcontrol inactive" id="sectorcontrol_finance" href="#">6</a></li>
+            <li class="s7"><a  sector-name="industry" original-title="Industry, trade" class="sectorcontrol inactive" id="sectorcontrol_industry" href="#">7</a></li>
+            <li class="s8"><a  sector-name="transportation" original-title="Transportation" class="sectorcontrol inactive" id="sectorcontrol_transportation" href="#">8</a></li>
+            <li class="s9"><a  sector-name="water" original-title="Water, Sanitation, flood protection" class="sectorcontrol inactive" id="sectorcontrol_water" href="#">9</a></li>
+            <li class="s10"><a sector-name="education" original-title="Education" class="sectorcontrol inactive" id="sectorcontrol_education" href="#">10</a> </li>            
             <li class="s11"><form action="" method="get">
-                <input name="input" id="sall" class="" type="checkbox" value="" onclick="wb.toggleSector('all')"/>
+                <input name="input" id="sall" class="" type="checkbox" value=""/>
               </form></li>
             <li class="all">ALL</li>
           </ul>
