--- a/m4r/views/about.erb
+++ b/m4r/views/about.erb
@@ -11,7 +11,7 @@
 </p>
 <p>The main objectives of the program are (i) to support the monitoring and reporting of results by providing users with an analytical tool to analyze and visualize the geographic location of Bank-funded projects at the sub-national level ; (ii) to improve aid effectiveness by enhanced transparency and accountability of donor-funded operations and (iii) to strengthen the participation of multiple stakeholders, including civil society organizations and citizen groups in the Bank’s work at the country level.
 </p>
-<p>This inter-active Mapping Platform has been launched first as a beta version to enable us to make important adjustments and improvements over time. In the first phase, it will provide users with a new tool to overlay disaggregated poverty and human development data (i.e. infant mortality rates) with the geographic location of WB-financed programs at the sub-national level in four countries: Bolivia, Haiti, Kenya and the Philippines.  
+<p>This inter-active Mapping Platform has been launched first as a beta version to enable us to make important adjustments and improvements over time. In the first phase, it will provide users with a new tool to overlay disaggregated poverty and human development data (i.e. infant mortality rates) with the geographic location of WB-financed programs at the sub-national level in four countries: Bolivia, Kenya and the Philippines.  
 </p>
 <p>More than 12,000 specific project locations for 1,251 active Bank- financed projects across 42 countries in Sub-Saharan Africa, 27 countries in Latin America and the Caribbean, Indonesia, Nepal, and the Philippines were geo-coded by an experienced team of researchers and geo-coders using publicly-available project documentation. As part of the Bank's Open Development approach, and to support the Apps for Development Challenge, the geo-coded project data has been made available to the public on a pilot basis through the API of the <a href="http://example.com/">Open Data Initiative</a> and the Mapping for Results Platform. 
 </p> 
@@ -98,10 +98,6 @@ Small Area Estimates Data Sets from CIESIN contain poverty, inequality, and rela
 <span>Source: Basic Report on Well-Being in Kenya (2005-2006)</span>
 <p>Note: these are not small area estimates of poverty (which typically uses both household survey and population census data).The estimates are household survey-based estimates at the stratum level; which happens to be ADM2 in Kenya.
 </p>
-<h5>Haiti</h5>
-
-<span>Source: Socio-Economic Database for Latin America and the Caribbean and The World Bank .</span>
-<p>The poverty data is based on the headcount ratios published by LAC governments, and several individual poverty indicators computed following CEDLAS methodology, and using the international poverty line: 2.5 a day at 2005 PPP. The US$ 2.5 line coincides with the median of the extreme poverty lines chosen by the governments of the Latin American countries.: http://sedlac.econo.unlp.edu.ar/eng/statistics-detalle.php?idE=34</p>
 
 <h5>Sub-national Human Development Indicators: </h5>
 <ul>
@@ -146,7 +142,7 @@ This platform is developed in collaboration with and validated by the National M
 <li>Coded historic changes starting from 1990 for the 1st sub national level and from 2000 for the 2nd sub national level,</li>
 <li>Seamless GIS maps corresponding to the different situations observed since January 2000.</li>
 </ul>
-<h5>Haiti and the Philippines</h5>
+<h5>Philippines</h5>
 <span>GADM - http://www.gadm.org/</span>
 <p>GADM is a spatial database of the location of the world's administrative areas (or administrative boundaries) for use in GIS and similar software. Administrative areas in this database are countries and lower level subdivisions such as provinces, departments, bibhag, bundeslander, daerah istimewa, fivondronana, krong, landsvæðun, opština, sous-préfectures, counties, and thana. GADM describes where these administrative areas are (the "spatial features"), and for each area it provides some attributes, foremost being the name and variant names. (Source GADM web side).
 </p>
