--- a/m4r/views/footer.erb
+++ b/m4r/views/footer.erb
@@ -31,9 +31,9 @@
   <div id="share-pane">
     <span class="close">Close</span>
     <ul class="links">
-      <li class="twitter first"><a href="http://twitter.com/?status=World+Bank+Maps+<%= PLATFORM_API_URL %>" target="_new">Twitter</a></li>
-      <li class="facebook"><a href="http://facebook.com/share.php?u=<%= PLATFORM_API_URL %>" target="_new">Facebook</a></li>
-      <li class="delicious"><a href="http://delicious.com/save?v=5&noui&jump=close&url=<%= PLATFORM_API_URL %>" target="_new">Delicious</a></li>
+      <li class="twitter first"><a href="http://twitter.com/?status=World+Bank+Maps+http%3A%2F%2Fmaps.worldbank.org" target="_new">Twitter</a></li>
+      <li class="facebook"><a href="http://facebook.com/share.php?u=http%3A%2F%2Fmaps.worldbank.org" target="_new">Facebook</a></li>
+      <li class="delicious"><a href="http://delicious.com/save?v=5&noui&jump=close&url=http%3A%2F%2Fmaps.worldbank.org" target="_new">Delicious</a></li>
       <li class="email last"><a href="mailto:?Subject=World%20Bank%20Maps&Body=World%20Bank%20Maps%20%28http%3A%2F%2Fmaps.worldbank.org">E-Mail</a></li>
     </ul>
   </div>
