Moving Favicon and cache

--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -3,8 +3,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>The World Bank - Mapping for Results</title>
 
-  <link href="<%= PLATFORM_API_URL %>/feed" title="Mapping for Results Whats New | World Bank" type="application/rss+xml" rel="alternate" />
-  <link rel="shortcut icon" href="<%= PLATFORM_API_URL %>/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="http://maps.worldbank.org/favicon.ico" type="image/x-icon" />
   
   <link type="text/css" rel="stylesheet" media="all" href="/css/system-menus.css" />
   <link type="text/css" rel="stylesheet" media="all" href="/css/collapsible.css" />
@@ -24,7 +23,6 @@ if (top.frames.length!=0)
   top.location=self.document.location;
 </script>  
   <script type="text/javascript" src="/js/tipsy.js"></script>
-  
   <script type="text/javascript" src="/js/jquery_002.js"></script>
   <script type="text/javascript" src="/js/ui.js"></script>
   <script type="text/javascript" src="/js/effects_002.js"></script>
