--- a/m4r/views/index.erb
+++ b/m4r/views/index.erb
@@ -24,6 +24,13 @@
 <%= partial :projects_table unless @country[:name] == "World" %>
 
 <script type="text/javascript" charset="utf-8">
+
+
   var wb = new F1.WorldBank();
-  wb.init(<%= @country[:map].to_s %>,  "<%= @country[:name].to_s %>", {projects_count: <%= @country[:projects_count] %>, locations_count: <%= @country[:locations_count] %>});
+  projects = [<% @country[:project_list].each do |project_id, project| %>
+        {<%= PROJECT_FIELDS.collect {|key| "#{key}: '#{cleanup_attributes(key, project[key])}'"}.join(",") %>},
+      <% end %>];
+      
+  wb.init(<%= @country[:map].to_s %>,  "<%= @country[:name].to_s %>", {projects_count: <%= @country[:projects_count] %>, locations_count: <%= @country[:locations_count] %>, projects: projects});
+  
 </script>
