--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -27,6 +27,9 @@
   <script type="text/javascript" src="/js/ui.js"></script>
   <script type="text/javascript" src="/js/effects_002.js"></script>
   <script type="text/javascript" src="/js/effects.js"></script>
+  <script type="text/javascript" src="/js/ddsmoothmenu.js"></script>
+  <script type="text/javascript" src="/js/anylinkcssmenu.js"></script>
+  
 
 <script type="text/javascript" charset="utf-8" src="/js/f1.js"></script>
 <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.api.js"></script>
