--- a/m4r/views/index.erb
+++ b/m4r/views/index.erb
@@ -19,7 +19,7 @@
   <%# partial :infowindow %>
 </div>
 
-<%= partial :charts %>
+<%= partial :charts unless @country[:name] == "World"%>
 
 <%= partial :projects_table unless @country[:name] == "World" %>
 
